# KeyGS

./: README.md  ablation.sh  analysis_colmap.ipynb  change_config.py  convert.py  extract_co3d.ipynb  gen_data.sh  go.sh  metric.ipynb  pyproject.toml  render.sh  run.sh  tone_convert.py
key_gaussian/: key_gaussian_config.py  key_gaussian_model.py  key_gaussian_pipeline.py
key_gaussian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: icomma_helper.py  image_utils.py  loss_utils.py  pose_utils.py  vis_utils.py
